[package]
authors = ["AntoineMugnier <amugnier@europe.com>"]
edition = "2021"
readme = "README.md"
name = "kaori-hsm-perf-test"
version = "0.1.0"

[dependencies]
kaori-hsm= "0.1.0"
cortex-m = {version="0.7.7", features=["critical-section-single-core"]}
cortex-m-microclock= "0.1.0"
defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f1 = {version ="0.15.1", features=["stm32f103"]}
cortex-m-rt = "0.7.3"
cty = "0.2.2"

[profile.release]
opt-level='s'

[build-dependencies]
bindgen = "0.68.1"
