cmake_minimum_required(VERSION 3.2)

project(kaori-hsm-perf-test LANGUAGES C CXX ASM)
set(CMAKE_CXX_STANDARD              17)
set(CMAKE_C_STANDARD                11)
add_library(qpcpp-tst STATIC ${CMAKE_CURRENT_SOURCE_DIR}/basic_hsm_qpcpp.cpp ${CMAKE_CURRENT_SOURCE_DIR}/interface.cpp ${CMAKE_CURRENT_SOURCE_DIR}/defered_print.cpp)
add_subdirectory(./qpcpp/)
target_link_libraries(qpcpp-tst qpcpp)
if ($ENV{DEFMT_LOG} STREQUAL "DEBUG" OR $ENV{DEFMT_LOG} STREQUAL "INFO" OR $ENV{DEFMT_LOG} STREQUAL "WARN" OR $ENV{DEFMT_LOG} STREQUAL "ERROR")
  target_compile_definitions(qpcpp-tst PRIVATE ENABLE_PRINT)
endif()
